Changed platformer to miniscape and added demo section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 											<h3>Slime Slayer RPG</h3>
 										</header>
 									</article>
-									<a  href="Demo/index.html" class="button scrolly">Demo</a>
+									<a  href="Demo/index.html" class="button scrolly">Slime Slayer Demo</a>
 
 									<!-- <article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
@@ -117,12 +117,15 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="platformer.html" class="image fit"><img src="images/platformer3.png" alt="" /></a>
+										<a href="miniscape.html" class="image fit"><img src="images/miniscape_title.png" alt="" /></a>
 										<header>
-											<h3>Platformer Game</h3>
+											<h3>Miniscape</h3>
 										</header>
-									</article>
-								</div>
+										<br>
+										</article>
+											<!-- miniscape demo -->
+										<a  href="/assets/miniscapeDemo/index.html" class="button scrolly">Miniscape Demo</a>
+									</div>
 							</div>
 
 						</div>
