--- a/slimeslayer.html
+++ b/slimeslayer.html
@@ -72,7 +72,7 @@
                             <br />
                             <h2><a href="https://cruelean.itch.io/slime-slayer-demo" target="_blank" >Itch Page Link</a>
                             </h2>
-                            <h3>Try the WebGL Demo! <a style="padding: 0px 15px; font-size: 24px;" href="Demo/index.html" class="button scrolly">Demo</a>
+                            <h3>Try the WebGL Demo! <a style="padding: 0px 15px; font-size: 24px;" href="Demo/index.html" class="button scrolly"> Slime Slayer Demo</a>
                             </h3>
                             <br>
                             <p style="text-align: left;">This game currently has 5 different zones, each with a separate enemy 
