--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 										<br>
 										</article>
 											<!-- miniscape demo -->
-										<a  href="/assets/miniscapeDemo/index.html" class="button scrolly">Miniscape Demo</a>
+										<!-- <a  href="/assets/miniscapeDemo/index.html" class="button scrolly">Miniscape Demo</a> -->
 									</div>
 							</div>
 
