--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 								</div>
 								<div class="col-4-special col-12-mobile">
 									<article class="item">
-										<a href="slimeslayer.html" class="image fit"><img src="images/slimeslayerlogo.png" alt="" /></a>
+										<a href="litesouls.html" class="image fit"><img src="images/litesoulstitle.png" alt="" /></a>
 										<header>
-											<h3>Slime Slayer RPG</h3>
+											<h3>Lite Souls</h3>
 										</header>
 									</article>
-									<a  href="Demo/index.html" class="button scrolly">Slime Slayer Demo</a>
+									<!-- <a  href="Demo/index.html" class="button scrolly">Slime Slayer Demo</a> -->
 
 									<!-- <article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
@@ -117,9 +117,9 @@
 										</header>
 										</article>
 									<article class="item">
-										<a href="minesweeper.html" class="image fit"><img src="images/minesweeper_logo_basic.png" alt="" /></a>
+										<a href="slimeslayer.html" class="image fit"><img src="images/slimeslayerlogo.png" alt="" /></a>
 										<header>
-											<h3>Minesweeper Replica</h3>
+											<h3>Slime Slayer RPG</h3>
 										</header>
 									</article>
 									
