--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
 
 							<img src="images/professional.png" width="30%"  alt="" />
 
-							<p>Hello, I'm Payton, currently a senior at Wentworth Institute of 
-								Technology pursuing a Bachelor of Science in Computer Science. I have a strong interest in game development and 
+							<p>Hello, I'm Payton, a Wentworth Institute of 
+								Technology graduate with a Bachelor's degree in Computer Science. I have a strong interest in game development and 
 								programming, as well as creating software in innovative and creative ways.
 							</p>
 							<br>
-							<p>Reach me at the following email address: falconep@wit.edu</p>
+							<p>Reach me at the following email address: paytonfalcone@gmail.com</p>
 							<a href="PaytonResume.pdf" class="button scrolly" target="_blank">Resume</a>
 
 
